--- a/test.ipynb
+++ b/test.ipynb
@@ -58,64 +58,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "제목: 비수도권 상공회의소협의회 출범\n",
-      "본문: \n",
-      "원문 링크: https://www.bigkinds.or.kr/v2/news/recentNews.do#modal-news1\n",
-      "--------------------------------------------------\n",
-      "제목: 박서진 “정신질환으로 군 면제, 활동차질 우려해 밝히기 어려웠다”\n",
-      "본문: \n",
-      "원문 링크: https://www.bigkinds.or.kr/v2/news/recentNews.do#modal-news1\n",
-      "--------------------------------------------------\n",
-      "제목: [라인W 날씨] 밤사이 찬바람 불며 추워져…내일 아침 서울 -4도\n",
-      "본문: \n",
-      "원문 링크: https://www.bigkinds.or.kr/v2/news/recentNews.do#modal-news1\n",
-      "--------------------------------------------------\n",
-      "제목: 이 시각 소방청 상황실\n",
-      "본문: \n",
-      "원문 링크: https://www.bigkinds.or.kr/v2/news/recentNews.do#modal-news1\n",
-      "--------------------------------------------------\n",
-      "제목: 美, HBM 포함 대중 반도체 수출규제 강화…삼성·하이닉스 영향\n",
-      "본문: \n",
-      "원문 링크: https://www.bigkinds.or.kr/v2/news/recentNews.do#modal-news1\n",
-      "--------------------------------------------------\n",
-      "제목: 경기도의회 국민의힘, 2025년 예산안 '불요불급 예산 전액 삭감' 선언\n",
-      "본문: \n",
-      "원문 링크: https://www.bigkinds.or.kr/v2/news/recentNews.do#modal-news1\n",
-      "--------------------------------------------------\n",
-      "제목: 3일 아침 최저 영하 8도…밤부턴 곳곳에 눈·비\n",
-      "본문: \n",
-      "원문 링크: https://www.bigkinds.or.kr/v2/news/recentNews.do#modal-news1\n",
-      "--------------------------------------------------\n",
-      "제목: [속보] 中상무부, 미국의 對中 반도체 수출 통제에 \"단호히 반대\"\n",
-      "본문: \n",
-      "원문 링크: https://www.bigkinds.or.kr/v2/news/recentNews.do#modal-news1\n",
-      "--------------------------------------------------\n",
-      "제목: \"콘돔보다 강력하다\"…'죽음의 병' 에이즈 백신 드디어 나왔다는데 관건은?\n",
-      "본문: \n",
-      "원문 링크: https://www.bigkinds.or.kr/v2/news/recentNews.do#modal-news1\n",
-      "--------------------------------------------------\n",
-      "제목: 美, 對中 반도체 수출통제 발표…한국산 HBM도 적용\n",
-      "본문: \n",
-      "원문 링크: https://www.bigkinds.or.kr/v2/news/recentNews.do#modal-news1\n",
-      "--------------------------------------------------\n",
-      "제목: [속보] 中상무부, 미국의 對中 반도체 수출 통제에 \"단호히 반대\"\n",
-      "본문: \n",
-      "원문 링크: https://www.bigkinds.or.kr/v2/news/recentNews.do#modal-news1\n",
-      "--------------------------------------------------\n",
-      "제목: 내년 여름부터 ‘AI 예보’…40초 만에 강수 예측\n",
-      "본문: \n",
-      "원문 링크: https://www.bigkinds.or.kr/v2/news/recentNews.do#modal-news1\n",
-      "--------------------------------------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
@@ -153,11 +98,110 @@
     "# 드라이버 종료\n",
     "driver.quit()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "import time\n",
+    "\n",
+    "# Selenium WebDriver 설정 (ChromeDriver 경로를 생략)\n",
+    "driver = webdriver.Chrome()\n",
+    "\n",
+    "# URL 열기\n",
+    "url = \"https://www.bigkinds.or.kr/v2/news/recentNews.do\"\n",
+    "driver.get(url)\n",
+    "\n",
+    "# 페이지 로드 대기\n",
+    "time.sleep(5)  # 페이지가 로드될 시간을 충분히 대기 (필요 시 조정)\n",
+    "\n",
+    "# 스크롤 다운으로 동적 콘텐츠 로드\n",
+    "driver.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\")\n",
+    "time.sleep(5)  # 추가 대기\n",
+    "\n",
+    "texts = []\n",
+    "# 데이터 크롤링\n",
+    "articles = driver.find_elements(By.CSS_SELECTOR, \"div.cont.news-detail\")\n",
+    "for article in articles:\n",
+    "    try:\n",
+    "        title = article.find_element(By.CSS_SELECTOR, \"strong.title\").text\n",
+    "        summary = article.find_element(By.CSS_SELECTOR, \"p.text\").text\n",
+    "        link = article.find_element(By.CSS_SELECTOR, \"a\").get_attribute(\"href\")\n",
+    "    except Exception as e:\n",
+    "        title, summary, link = \"N/A\", \"N/A\", \"N/A\"\n",
+    "\n",
+    "    texts.append(summary)\n",
+    "    print(f\"제목: {title}\")\n",
+    "    print(f\"본문: {summary}\")\n",
+    "    print(f\"원문 링크: {link}\")\n",
+    "    print(\"-\" * 50)\n",
+    "\n",
+    "# 드라이버 종료\n",
+    "driver.quit()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "전 세계 최대 규모 클라우드 컨퍼런스 'AWS 리인벤트(re:Invent) 2024'가 2일(현지시간) 아마존웹서비스(AWS) 주최로 미국 라스베이거스에서 본격 개막했다. 인공지능(AI) '홀로그램 3기'가 AWS 최신 기술을 소게하고 있다. 김동욱 기자 gphoto@etnews.com\n",
+      "------------------------------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "경기도시장상권진흥원(이하 경상원)은 경기도 소상공인 경제 이슈 브리프 ‘소상공인의 미래를 여는 디지털 전환:혁신과 성장을 위한 변화’를 발간했다고 3일 밝혔다. 보고서는 다양한 분야에 적용되고 있는 디지털 및 스마트 기술의 현황을 분석하고 디지털 전환을 고려해야 하는 소상공인의 지원 정책에 대해 수록했다. 디지털 전환이란 단순히 일의 효율성을 향상하는 것을 넘어 디지털 기술을 사회 전반에 적용해 ‘소비자 중심’의 새로운 비즈니스 생태계를 구축하는 것을 의미한다. 소상공인의 디지털 전환은 오프라인 중심의 전통적 운영 방식을 넘어 매장 관리의 디지털화·지능화·연결화를 통해 운영 전반을 혁신하는 것을 목표로 한다. 키오스크, 테이블 오더, 디지털 광고판 같은 기술이 그 대표적 사례다. 하지만 소상공인의 디지털 전환 인식 수준은 100점 만점 중 43.3점으로 낮은 수준으로 평가됐다. 자료에 따르면, 소상공인들이 활용하는 디지털 시스템은 온라인 판로 개척(37.4%), 스마트 주문결제 시스템(31.8%) 등 간단한 기술이 주를 이루는 것으로 확인됐다. 반면 대중들의 디지털 전환 인지 및 영향력은 높은 수준을 기록했는데 응답자의 84.6%가 디지털 전환에 대해 인지하고 있으며 36.3%가 직접 체감하고 있다고 응답했다. 또 전체 응답자 중 55.1%는 디지털 전환이 개인의 삶에 긍정적인 영향을 줄 것이라고 답했다. 코로나 팬데믹 이후 디지털 기술에 대한 대중적 요구는 급격히 증가했다. 온라인쇼핑 시장 규모는 2017년 94.2조 원에서 2023년 228.9조 원으로 약 243% 증가했고 모바일 쇼핑은 같은 기간은 319% 이상 성장했다. 이 같은 변화는 소상공인들에게도 디지털 전환의 필요성을 강하게 시사한다고 볼 수 있다. 디지털 전환은 △개인 맞춤형 마케팅 고도화 △무인화·자동화로 인한 경쟁력 강화 △온·오프라인 융합 강화 △다양한 비즈니스 모델을 통한 새로운 성장 동력 확보 등 소상공인에게 다양한 가능성을 제공한다. 다만, 전문가들은 성공적인 디지털 전환을 위해 △보안 위협 대응 △디지털 전환 인식 개선 및 역량 강화 △높은 초기 투자 비용 등의 과제를 먼저 해결해야 한다고 지적했다. 김민철 경기도시장상권진흥원 원장은 “금번 발간된 보고서는 온라인 소비가 빠르게 증가하는 사회변화 속에서 소상공인의 디지털 전환의 현황과 해결 과제를 조망했다”며 “현재 경상원에서 진행하는 소상공인 판로개척 지원사업, 라이브커머스 교육 등 디지털 및 온라인 관련 사업을 비롯해 앞으로도 소상공인들에게 실질적 도움이 될 수 있는 지원사업을 마련할 것”이라고 말했다. 양평=윤상연 기자\n",
+      "------------------------------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "최고의 한 해였지만 아쉬움은 지울 수 없다. 삼성 라이온즈 원태인(25)이 2025년엔 기쁨의 눈물을 흘리겠다고 약속했다. 원태인은 올해 15승 6패 평균자책점 3.66을 거두며 곽빈(25·두산 베어스)과 함께 다승왕에 올랐다. 국내 선수가 다승왕에 오른 건 2017년 양현종(36·KIA) 이후 7년 만이다. 원태인은 타자친화구장인 대구 삼성라이온즈파크를 홈 구장으로 사용하면서도 국내 투수 중 가장 좋은 성적을 거뒀다. 가을 야구에서도 원태인의 활약은 눈부혔다. LG 트윈스와의 플레이오프 2차전에서 선발로 나와 6과 3분의 2이닝 1실점 호투로 한국시리즈 진출에 기여했다. 한국시리즈 1차전에서도 선발로 나서 5이닝 동안 1점도 내주지 않았다. 아쉽게도 서스펜디드 게임이 선언되면서 승리투수는 되지 못했지만, 원태인은 \"4차전도, 7차전도 던질 수 있다\"며 투지를 불태우기도 했다. 원태인은 최근 기초군사훈련을 받느라 다승왕에 오르고도 KBO 시상식에 불참했다. 대신 멋진 거수경례와 함께 동영상으로 수상 소감을 전했다. 3일 열린 조아제약 프로야구대상 시상식에서 만난 그는 짧은 머리를 감추기 위해 가발을 쓰고 참석했다. 원태인은 \"고민했는데, 오래 남을 사진이라 어쩔 수 없는 선택을 했다\"고 웃었다. 대구 50사단에서 훈련을 받은 그는 \"잠깐 꿈꾸다 온 것 같다. (어깨 때문에)포복 훈련이 걱정됐는데 배려를 해주셨다\"고 말했다. 이어 \"사격은 잘 했다. 20발 중 18발을 맞췄다. 탄착군도 형성됐다. 교관이 \"제구가 좋아서 기대를 했는데 첫 날 잘 쏴서 '실망했다'고 하셨는데, 두 번째 날은 잘 쐈다\"며 뿌듯해했다. 원태인은 \"데뷔 후 최고 성적을 내서 기분 좋았다. 우승은 못 했지만, 한국시리즈까지 가서 마지막까지 팬들과 야구를 했다\"며 \"눈물이 없는 편인데, 5차전이 끝난 뒤 아쉬워서 눈물이 맺혔다. 내년엔 행복의 눈물을 흘리겠다\"고 했다. 그러나 마지막까지 웃진 못했다. 한국시리즈 4차전에선 어깨 통증 탓에 2와 3분의 1이닝 6실점으로 부진하고 조기강판됐다. 관절 손상 진단을 받은 원태인은 국제대회 프리미어12에도 나서지 못했다. 삼성을 대표하는 투수로 발돋움한 원태인은 '푸른 피의 에이스'라 불린다. 경북고 선배이자 삼성을 한국시리즈 우승으로 이끈 배영수의 별명을 물려받았다. 원태인은 \"책임감도 느끼고, 그에 걸맞는 투수가 되려고 노력하고 있다\"고 했다. 더 안타까웠던 건 프리미어12 참가가 불발됐기 때문이다. 원태인은 \"첫 경기에서 졌다는 소식을 부대에서 듣고 안타까웠다. 정말 많이 응원했는데…\"라며 \"내가 있었다고 좋은 성적이 나진 않았겠지만, 다가오는 국제대회에는 꼭 참가해 좋은 성적을 내고 싶다\"고 했다. 부상 회복도 순조로워 다음 시즌 준비도 시작했다. 원태인은 \"1월 중순까지 원래 공을 던지지 않는다. 훈련소 입소 전에 검사를 했는데, 2~3주 동안 많이 회복됐다. 내년에도 큰 문제 없이 준비를 할 수 있을 것 같다\"고 말했다. 이어 포스트시즌 때 투구 밸런스가 정말 좋았다. 그 밸런스를 잊지 않고 내년까지 유지하려고 할 생각\"이라고 전했다. 확실한 목표도 있다. 삼진을 늘리는 거다. 원태인은 \"(헛스윙을 이끌어내는 주무기)체인지업이 이제 타자들의 눈에 많이 익숙해졌다는 생각이 들었다. 특히 포스트시즌도 그렇고, 대표팀에서도 삼진을 잡을 수 있는 투구가 필요하다. 이번 겨울 삼진을 잡기 위한 고민을 하고 여러 가지 시도를 해보려 한다\"고 말했다.\n",
+      "------------------------------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "현대자동차가 민관협력으로 진행되는 자연환경복원 ESG 사업에 참여한다. 현대차는 한국환경보전원, 아산시와 함께 '자연환경복원 및 생물다양성 증진을 위한 업무협약'을 체결했다고 3일 밝혔다. 이를 통해 인적, 물적 자원 등을 활용해 훼손된 생태계를 복원하는 데 앞장설 방침이다. 이번 사업 대상지는 현대차 아산공장 사업장 인근의 충남 선장면 군덕리 773-2일원으로 선정됐다. 현대차와 한국환경보전원은 축구장 면적의 약 1.3배 크기인 9000㎡ 공간에 ▲수서생물원 ▲철새관찰대 ▲생태학습공간 등을 조성해 생태환경을 개선할 계획이다. 아산시는 자연환경 복원 이후의 유지관리를 담당한다. 현대차는 향후에도 사업장 인근지역의 생태계 복원 및 생물다양성 증진 활동을 이어가며 지속적으로 자연환경복원사업에 참여할 계획이다. 현대차 GPO 김일범 부사장은 \"현대차가 민관협력으로 진행되는 자연환경복원 사업에 참여할 수 있어 기쁘게 생각한다\"며 \"현대차는 이번 기회를 계기로 앞으로도 정부와의 공조를 통해 ESG경영 및 자연환경보존, 생물다양성 증진 활동에 적극적으로 나설 예정\" 이라고 밝혔다. /차현정 기자\n",
+      "------------------------------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "도널드 트럼프 미 대통령 당선인이 2일(현지시간) 일본제철이 미국 US스틸을 인수하는 것에 전적으로 반대한다고 밝혔다. 트럼프 당선인은 소셜미디어 트루스소셜 계정에서 “나는 한때 위대하고 강력했던 US스틸이 외국 기업, 이번 경우 일본제철에 인수되는 것에 완전히 반대한다”고 말했다. 그는 “우리는 일련의 세제 혜택과 관세 조치들로 US스틸을 다시 강하고 위대하게 만들 것”이라며 “대통령으로서 나는 이 거래가 이뤄지지 않도록 막겠다”고 덧붙였다. 트럼프 대통령은 후보 시절 일본제철의 US스틸 인수에 반대한다는 뜻을 수 차례 언급했지만, 당선 후 이 문제에 대해 언급한 건 처음이다. NHK, 니혼게이자이신문 등 일본 언론들은 3일 이 소식을 발빠르게 전하며 US스틸 인수 성사 여부에 촉각을 곤두세웠다. 이와야 다케시(岩屋毅) 일본 외상은 이날 “미일 간 상호 투자 기회를 확대하고 경제 관계를 더욱 강화하는 것은 서로에게 필요한 일”이라고 말했다. 일본제철은 미국 철강산업의 상징적 존재인 US스틸을 149억 달러(약 20조9000억 원)에 인수하는 방안을 추진 중이다. 하지만 트럼프 당선인은 물론 조 바이든 미국 대통령 등도 반대 의사를 밝히면서 인수에 난항을 겪어왔다. 이시바 시게루(石破茂) 일본 총리는 앞서 20일 바이든 대통령에게 서한을 보내 일본제철의 US스틸 인수 계획 승인을 요청한 바 있다. 이시바 총리는 일본이 미국에 가장 많이 투자하는 국가라는 점을 설명하며 “4년간의 성과에 그림자가 지지 않도록 인수 계획 승인을 부탁한다”고 요청했다. 도쿄=이상훈 특파원 sanghun@donga.com\n",
+      "------------------------------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "[이데일리 이지현 이지은 기자] 정부가 우리나라 남성 육아휴직 사용률을 2030년 70%까지 대폭 끌어올리겠다는 목표를 제시했다. 남성 맞돌봄 문화를 확산하고 일·가정 양립 환경을 조성해 같은 기간 30~44세 여성 경력 단절 비율은 절반으로 줄이겠다는 방침이다. (사진=게티이미지)저출산·고령사회위원회는 3일 제6차 인구 비상대책회의를 개최하고 이 같은 내용의 일·가정 양립 목표를 처음으로 제시했다. 현재 여성 육아휴직 사용률(민간+공공)은 70%인데 반해, 남성 육아휴직 사용률은 6.8%에 불과하다. 정부는 여성도 충분히 육아휴직을 사용할 수 있게 하면서 남성 사용률을 높여야만 초저출산 상황을 타개할 수 있을 것으로 보고 있다. 남성 육아휴직이 활성화하면 30~44세 여성의 경력단절 비율도 현재 22.3%에서 2030년 10%로 절반 이하로 낮아질 것으로 전망했다. 아울러 여성 육아휴직 사용률도 2030년 85%로 확대해 나간다는 방침이다. 조성래 저고위 평가분석과장은 “남성이 적극적으로 육아에 참여하는 사회문화로 바꿔나가야 여성의 경력단절 상황도 바꿀 수 있다”며 “일본도 남성 육아휴직 사용률 목표를 80%로 정한 이후 가파르게 사용률이 상승하고 있다. 우리도 목표를 도전적으로 잡고 관련 대책을 보완하면서 목표 달성을 위해 노력할 것”이라고 설명했다. 이날 회의에서는 저출산 초고령화라는 대한민국 인구구조 변화에 따른 국토교통 부문 대응 방안에 대해서도 논의했다. 그동안 성장 전제의 국토개발이 주를 이뤘다면 이젠 인구 맞춤형 국토·도시정책으로 전환이 필요하다고 본 것이다. 이에 따라 고령친화 주거·교통환경을 조성키로 했다. 임형철 저고위 사무처장은 “세부 이행계획을 2025년 업무계획과 국토, 주거 등 장기종합계획에 반영해 추진할 예정”이라고 설명했다. 이날 가족친화 공항 조성방안도 논의됐다. 인천공항을 시작으로 전국 14개 공항을 ‘웰컴키즈존’으로 만들어 아이들을 환영하는 문화를 만들어나간다는 방침이다. 우선 앞으로 공항 주차장 감면 대상 막내 나이 기준을 만 15세에서 만 18세 이하로 상향 조정한다. 이를 통해 주차요금 감면 혜택을 받는 다자녀 가구가 약 20% 증가할 것으로 전망된다. 공항 주차장 내 터미널 접근성이 좋은 구역에 임산부·영유아·고령자 등 교통약자와 그 동반 가족이 이용할 수 있는 ‘가족 배려 주차구역’도 새롭게 조성한다. 임산부나 가족 단위 여행객 등의 공항 이용에 불편함이 없도록 가족특화 대기공간 등도 조성한다. 또 공항 상업시설 입찰 시 유아용 비품 및 메뉴 구비를 의무화하고 우수 매장에는 ‘웰컴키즈존’을 시행하는 등 인센티브를 부여한다. 또 임산부·영유아용 필수 보건위생용품을 공항 안내데스크에 비치해 필요 시 이용객에게 제공키로 했다. 이른둥이 맞춤형 지원대책의 추가 방안으로 내년부터 이른둥이 가정은 산모·신생아 건강관리 지원사업의 소득기준과 관계없이 서비스 이용이 가능해진다. 생후 180일로 한정됐던 신청 유효기간을 생후 2년까지 확대하고, 서비스 이용기간도 최대 2배 늘린다. 주형환 저고위 부위원장은 “출생아 수와 혼인건수 증가뿐 아니라 출산의향과 결혼인식도 긍정적으로 변화한 것은 그간 저출생 추세 반전을 위한 정책 대응과 사회변화 노력이 통계적인 시그널로 이어지고 있는 것”이라며 “긴장을 늦추지 않고 그간의 노력에 더해 국민이 직접 체감할 수 있는 정책을 적극 발굴해 속도감 있게 실행에 옮기겠다”고 강조했다.\n",
+      "------------------------------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "2024년 TTA 시험인증 대상 시상식이 한국정보통신기술협회(TTA)와 전자신문이 공동 주최로 3일 경기도 성남시 TTA에서 열렸다. 왼쪽부터 손승현 TTA 회장, 이종서 무브먼츠 이사, 신창균 우리넷 부사장, 기정아 비에이치이브이에스 책임연구원, 서병일 원우이엔지 대표, 이해민 삼성전자 그룹장, 이광우 코위버 대표, 윤대업 LG전자 책임연구원, 이정희 안랩 책임연구원, 만리우 SGS 디렉터, 장동섭 KT 팀장, 손일주 TTA 소장이 기념촬영했다. 박지호기자 jihopress@etnews.com\n",
+      "------------------------------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "전 세계 최대 규모 클라우드 컨퍼런스 'AWS 리인벤트(re:Invent) 2024'가 2일(현지시간) 아마존웹서비스(AWS) 주최로 미국 라스베이거스에서 본격 개막했다. 인공지능(AI) '홀로그램 3기'가 AWS 최신 기술을 소게하고 있다. 김동욱 기자 gphoto@etnews.com\n",
+      "------------------------------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "3일 관련업계에 따르면 롯데케미칼은 여수 1~3공장 중 2공장의 일부 라인 가동 중단 절차에 돌입했다. 에틸렌그라이콜(EG), 산화에틸렌유도체(EOA)의 생산 라인이 멈춘 것이다. 앞서 롯데케미칼은 올 상반기 페트(PET) 라인 가동을 중단한 바 있다. 롯데케미칼 측은 크래커 가동률 조정에 따라 효율성 제고를 위해 다운스트림 일부 라인의 가동을 탄력적으로 운영하며 최적의 가동방안을 검토하는 중이라는 입장이며 2공장 전체 가동 중단은 아니라고 설명했다. 롯데케미칼은 올 들어 6600억원 대의 영업손실을 기록했다. 이에 수익성 악화 요인으로 지적받는 기초화학 비중을 낮추는 작업을 전개하는 등 운영 효율화를 지속 추진 중이다. 조성우 기자 good_sw@etnews.com\n",
+      "------------------------------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "2024년 TTA 시험인증 대상 시상식이 한국정보통신기술협회(TTA)와 전자신문이 공동 주최로 3일 경기도 성남시 TTA에서 열렸다. 왼쪽부터 손승현 TTA 회장, 이종서 무브먼츠 이사, 신창균 우리넷 부사장, 기정아 비에이치이브이에스 책임연구원, 서병일 원우이엔지 대표, 이해민 삼성전자 그룹장, 이광우 코위버 대표, 윤대업 LG전자 책임연구원, 이정희 안랩 책임연구원, 만리우 SGS 디렉터, 장동섭 KT 팀장, 손일주 TTA 소장이 기념촬영했다. 박지호기자 jihopress@etnews.com\n",
+      "------------------------------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "(서울=연합뉴스) 신준희 기자 = 29일 국회에서 열린 예산결산특별위원회 전체회의에서 박정 위원장이 야당 단독으로 감액 예산안을 통과시키고 있다. 2024.11.29 hama@yna.co.kr 여야가 3일 더불어민주당이 예산결산특별위원회에서 단독 처리한 내년도 감액 예산안을 두고 팽팽한 신경전을 이어갔다. 민주당이 밀어붙인 ‘감액 예산안’의 국회 본회의 상정이 보류되면서 오는 10일까지 협상 시간을 벌었지만 국민의힘은 ‘야당의 감액안 철회’를, 민주당은 ‘정부·여당의 증액안 제출’을 전제조건으로 각각 내걸며 좀처럼 접점을 찾지 못했다. 추경호 원내대표(대구 달성군)는 이날 국회에서 열린 원내대책회의에서 “이재명 대표와 민주당은 예산 삭감, 날치기 처리에 대해 대국민 사죄하라”며 “사과와 철회 조치가 선행되지 않으면 그 어떤 추가 협상도 없다”고 압박했다. 추 원내대표는 이재명 민주당 대표를 향해 “어제 대구 현장 최고위원회의에서 지역사랑상품권 예산 2조 원을 민생 돌봄 마중물로 쓰겠단 현수막 뒷배경으로 걸었다. 불과 나흘 전에 헌정사상 초유의 일방적 날치기로 민생 예산과 알앤디 예산 국민 안전 예산을 대거 삭감 처리해놓고 2조 원 예산을 어디서 마련하겠단 거냐”며 지적했다. 이어 “이것은 바로 민주당의 감액 예산 강행 단독 처리가 이재명 대표의 갑작스런 지시로 이재명표 지역사랑상품권 예산 2조 원 증액을 위한 정부여당의 겁박용 꼼수라는 것을 스스로 자백한 것이다. 뿐만 아니라 정부예산안에 4조 원을 추가 삭감해 더 긴축적으로 만들어 처리하고 어제 대구 가서는 다시 확장재정이 필요하다고 뻔뻔스럽게 앞뒤가 전혀 맞지 않는 몰염치 연기를 했다”고 덧붙였다. 반면 민주당 박찬대 원내대표는 이날 원내대책회의에서 “정부 예산안은 애초부터 민생 경제 회생 목적이 아닌 초부자감세 유지와 권력기관 특권 유지에만 혈안이 된 비정상 예산이었다”며 “예비비나 대통령실과 검찰, 감사원 특활비가 감액됐다고 국정이 마비될 일이 없다고 강조했다. 대통령실이 야당의 예산 삭감으로 인해 민생, 치안, 외교 등에 문제가 생기고 국민 피해가 발생하면 전적으로 민주당 책임이라고 비판한 것에 대한 반박이다. 특히 민주당의 내년도 예산 감액안 때문에 경제리스크가 가중될 것이란 최상목 경제부총리의 발언을 지적하며 “거짓말 아니면 남 탓밖에 할 줄 모르는 한심한 정부”라며 이같이 밝혔다. 이어 “아무리 상습적으로 거짓말하는 정부라 해도 어느 정도는 말이 되게 해야 국민을 속일 수 있지 않겠나”라며 “대통령실과 검찰의 특수활동비가 깎였다고 민생 경제가 무너지고 치안이 불안해지는 정부라면 차라리 간판을 내리고 문 닫는 게 더 낫다”고 목소리를 높였다. 이상훈 기자 hksa707@idaegu.com\n",
+      "------------------------------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "오피스텔 내부 방을 개수를 늘리기 위해 벽을 추가 설치하는 등 위법한 오피스텔을 중개한 공인중개사에게 손해배상 요구가 가능할까. 3일 한국소비자원에 따르면, 이같은 실제 사례가 담긴 '위법한 오피스텔 중개에 따른 중개수수료 환급 및 손해배상 요구'라는 제하의 분쟁조정결정사례가 최근 공표됐다. 해당 사건의 개요는 다음과 같다. 신청인 A씨는 피신청인 B씨(공인중개사)의 중개를 통해 오피스텔을 임차하기로 계약서에 사인을 했다. 그리고 B씨에게 부동산 중개 수수료 21만2000원을 지불했다. 이후 A씨는 전입신고를 하려는 과정에 임차한 오피스텔이 방의 개수를 늘리기 위해 벽을 추가 설치한 위반 건축물이라는 사실을 확인했다. A씨는 B씨에게 부동산 중개 수수료의 반환을 요구했지만, B씨는 이를 거부했다. A씨의 주장에 따르면, 오피스텔 위반 구조를 복원하는 2주 동안의 공사기간에 A씨의 외부 숙식 등의 비용이 나왔다. 이에 오피스텔 소유주 C씨로부터 70만원을 받았다. A씨는 오피스텔 공사기간 중에도 임대료, 관리비, 전기요금 등을 지불했다고 한다. 이후 A씨는 오피스텔 소유주 C씨와 임대차 계약을 해지하고, 다른 지역으로 주거지를 옮겼다. 해당 사건과 관련해 A씨는 \"임대차 대상 오피스텔이 위반 건축물이었음에도 B씨가 이 사실을 고지하지 않아 다른 곳으로 이사하는 등의 피해가 발생했으므로 부동산 중개 수수료의 환급과 이사 피해·정신적 손해 등에 대한 배상을 요구한다\"고 주장했다. 반면 B씨는 \"A씨가 오피스텔의 소유주 C씨로부터 금전적 배상(70만원)을 받았고, A씨가 관할 지자체에 민원을 제기해 과태료 200만원을 처분 받았다\"며 \"부동산 중개 수수료 21만2000원을 환급하겠으나 추가의 배상은 할 수 없다\"고 반박했다. 이에 한국소비자원은 \"B씨는 '공인중개사법' 제25조 제1항 및 '공인중개사법 시행령' 제21조 제1항 제1호에 따라 신청인에게 중개 대상물의 종류·소재지·면적·용도·구조 등의 기본적인 사항을 확인·설명했어야 하는데 이행하지 않았다\"고 B씨의 과오를 지적했다. 이어 \"관련 오피스텔이 위법한 건축물로 확인돼 오피스텔의 구조를 복원하는 과정에서 약 2주간의 공사기간 동안 오피스텔에 거주하지 못하고 불편을 겪었다. 결국 A씨는 이 사건 임대차 계약을 해지하게 됐다\"면서 \"B씨는 위 중개 대상물을 제대로 확인하지 않음에 따라 신청인에게 발생한 손해에 대해 배상할 책임이 있다고 할 것\"이라고 전했다. 그러면서 \"배상 범위는 오피스텔의 소재지에서 이사한 지역과의 거리가 약 32km(자동차로 약 1시간 정도 소요)인 점, 신청인이 관할 구청에 민원을 제기해 B씨가 지자체부터 과태료 처분을 받아 200만원을 납부한 점, 신청인이 겪었을 불편함 등을 고려해 이 사건 중개 수수료 21만2000원을 환급하고, 추가로 10만원을 배상함이 상당하다\"고 덧붙였다. 반면 한국소비자원 측은 \"A씨가 요구하는 주택 임차에 따른 세액공제 혜택·무주택 세대주 자격 획득 불가 등의 피해는 B씨가 알았거나 알 수 있었다고 보기 어려워 이를 인정하기 어렵다\"며 \"정신적 피해는 재산적 손해를 배상함으로써 보전된다고 봄이 상당하므로 별도로 인정하기 어렵다\"고 밝혔다.지난 7월 10일 공인중개사의 확인·설명 의무를 강화하는 '공인중개사법 시행령·시행규칙 개정안'이 시행됐다. 빌라 등 전세사기로 보증금을 떼이는 피해 사례가 속출하자, 정부가 임차인 보호를 위해 공인중개사의 의무를 강화한 것이다. 국토교통부에 따르면, 개정안에는 △임대차 계약 체결 이전 선순위 권리 관계 등 확인·설명 △임차인 보호 제도 설명 △현장 안내 시 중개보조원 여부 확인 △관리비 항목 등의 내용이 담겼다. 이를 어길 경우 공인중개사는 6개월 이내 자격정지 또는 500만원 이하 과태료가 부과된다. 세부적으로 공인중개사는 임대차 계약 시 임차인에게 임대인이 체납한 세금과 선순위 세입자의 보증금 등 중개 대상물의 선순위 권리관계를 설명해야 한다. 등기사항증명서와 토지대장, 건축물대장 등을 통해 확인 가능한 정보 외에도 임대인이 제출하거나 열람 동의한 확정일자 부여 현황, 국세와 지방세 체납 정보, 전입세대 확인서를 확인하고 임차인에게 보증금 선순위 관리관계를 고지하도록 했다. 이같은 개정 내용의 실효성을 높이기 위해 공인중개사가 확인·설명한 내용은 '중개대상물 확인·설명서'에 명기하고, 공인중개사·임대인·임차인이 같이 확인하고 서명하도록 했다. 아울러 임차인은 중개사무소 직원으로부터 현장 안내를 받을 시 안내자가 공인중개사인지 중개보조원인지 여부를 확인할 수 있게 된다. 중개보조원이 현장 안내를 할 경우 중개 의뢰인에게 본인이 중개 보조원이라는 사실을 알리고 공인중개사는 중개 대상물 확인·설명서에 중개보조원의 신분 고지 여부를 표기해야 한다는 내용도 담겼다. 권준영기자 kjykjy@dt.co.kr\n",
+      "------------------------------------------------------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "t_split = []\n",
+    "for a in texts:\n",
+    "    t_split.append(a.split('.'))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -171,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.0rc1"
   }
  },
  "nbformat": 4,
