--- a/save_excel_news.ipynb
+++ b/save_excel_news.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,18 +10,77 @@
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.support.ui import WebDriverWait\n",
     "from selenium.webdriver.support import expected_conditions as EC\n",
+    "from selenium.webdriver.common.action_chains import ActionChains\n",
     "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "로그인 및 복귀 완료\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Selenium WebDriver 설정 (ChromeDriver 경로를 생략)\n",
+    "driver = webdriver.Chrome()\n",
+    "driver.maximize_window()\n",
+    "\n",
+    "try:\n",
+    "    # 사이트 접속\n",
+    "    driver.get(\"https://www.bigkinds.or.kr/v2/news/index.do\")\n",
+    "\n",
+    "    # 로그인 영역에서 로그인 버튼 클릭\n",
+    "    login_area = WebDriverWait(driver, 10).until(\n",
+    "        EC.presence_of_element_located((By.CLASS_NAME, \"login-area\"))\n",
+    "    )\n",
+    "    login_button = login_area.find_element(By.CLASS_NAME, \"btn-login\")\n",
+    "    login_button.click()\n",
+    "\n",
+    "    # ID 입력\n",
+    "    user_id_input = WebDriverWait(driver, 10).until(\n",
+    "        EC.presence_of_element_located((By.ID, \"login-user-id\"))\n",
+    "    )\n",
+    "    user_id_input.send_keys(\"wnsgud3738@naver.com\")\n",
+    "\n",
+    "    # 비밀번호 입력\n",
+    "    password_input = WebDriverWait(driver, 10).until(\n",
+    "        EC.presence_of_element_located((By.ID, \"login-user-password\"))\n",
+    "    )\n",
+    "    password_input.send_keys(\"@pjh1514\")\n",
+    "\n",
+    "    # 로그인 버튼 클릭\n",
+    "    login_submit_button = WebDriverWait(driver, 10).until(\n",
+    "        EC.element_to_be_clickable((By.ID, \"login-btn\"))\n",
+    "    )\n",
+    "    login_submit_button.click()\n",
+    "\n",
+    "    # 로그인 후 메인 페이지로 이동\n",
+    "    time.sleep(3)  # 로그인 처리가 완료될 때까지 잠시 대기\n",
+    "    driver.get(\"https://www.bigkinds.or.kr/v2/news/index.do\")\n",
+    "\n",
+    "    print(\"로그인 및 복귀 완료\")\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"오류 발생: {e}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "로그인 및 복귀 완료\n",
       "기간 버튼을 클릭했습니다.\n",
       "1일 버튼을 클릭했습니다.\n",
       "달력 버튼을 클릭했습니다.\n",
@@ -41,10 +100,49 @@
     "\n",
     "# URL 열기\n",
     "url = \"https://www.bigkinds.or.kr/v2/news/index.do\"\n",
-    "driver.get(url)\n",
+    "open_url = driver.get(url)\n",
     "\n",
     "# 페이지 로드 대기\n",
-    "time.sleep(3)  # 페이지가 로드될 시간을 충분히 대기 (필요 시 조정)\n",
+    "time.sleep(2)  # 페이지가 로드될 시간을 충분히 대기 (필요 시 조정)\n",
+    "\n",
+    "try:\n",
+    "    # 사이트 접속\n",
+    "    open_url\n",
+    "\n",
+    "    # 로그인 영역에서 로그인 버튼 클릭\n",
+    "    login_area = WebDriverWait(driver, 10).until(\n",
+    "        EC.presence_of_element_located((By.CLASS_NAME, \"login-area\"))\n",
+    "    )\n",
+    "    login_button = login_area.find_element(By.CLASS_NAME, \"btn-login\")\n",
+    "    login_button.click()\n",
+    "\n",
+    "    # ID 입력\n",
+    "    user_id_input = WebDriverWait(driver, 10).until(\n",
+    "        EC.presence_of_element_located((By.ID, \"login-user-id\"))\n",
+    "    )\n",
+    "    user_id_input.send_keys(\"wnsgud3738@naver.com\")\n",
+    "\n",
+    "    # 비밀번호 입력\n",
+    "    password_input = WebDriverWait(driver, 10).until(\n",
+    "        EC.presence_of_element_located((By.ID, \"login-user-password\"))\n",
+    "    )\n",
+    "    password_input.send_keys(\"@pjh1514\")\n",
+    "\n",
+    "    # 로그인 버튼 클릭\n",
+    "    login_submit_button = WebDriverWait(driver, 10).until(\n",
+    "        EC.element_to_be_clickable((By.ID, \"login-btn\"))\n",
+    "    )\n",
+    "    login_submit_button.click()\n",
+    "\n",
+    "    # 로그인 후 메인 페이지로 이동\n",
+    "    time.sleep(3)  # 로그인 처리가 완료될 때까지 잠시 대기\n",
+    "    driver.get(\"https://www.bigkinds.or.kr/v2/news/index.do\")\n",
+    "\n",
+    "    print(\"로그인 및 복귀 완료\")\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"오류 발생: {e}\")\n",
+    "\n",
     "\n",
     "# \"기간\" 버튼 클릭\n",
     "try:\n",
@@ -118,11 +216,21 @@
     "    print(f\"버튼 클릭 오류: {e}\")\n",
     "    \n",
     "try:\n",
+    "       # 엑셀 다운로드 버튼 로드 대기\n",
+    "    button = WebDriverWait(driver, 10).until(\n",
+    "        EC.presence_of_element_located((By.CSS_SELECTOR, \"button.btn.btn-wh.ml-auto.news-download-btn.mobile-excel-download\"))\n",
+    "    )\n",
+    "\n",
+    "    # move_to_element()로 버튼 위치로 이동\n",
+    "    actions = ActionChains(driver)\n",
+    "    actions.move_to_element(button).perform()\n",
+    "\n",
     "    # 버튼 로드 대기\n",
     "    button = WebDriverWait(driver, 10).until(\n",
     "        EC.presence_of_element_located((By.CSS_SELECTOR, \"button.btn.btn-wh.ml-auto.news-download-btn.mobile-excel-download\"))\n",
     "    )\n",
     "    \n",
+    "\n",
     "    # JavaScript로 클릭\n",
     "    driver.execute_script(\"arguments[0].click();\", button)\n",
     "    print(\"엑셀 다운로드 버튼 클릭 성공\")\n",
